# react-native-cryptopp

./: .editorconfig  .gitignore  .gitmodules  404.html  CONTRIBUTING.md  README.md  build_cryptopp.sh  build_ios_fat_lib.sh  compile_cryptopp.sh  index.html  package-lock.json  package.json  react-native-cryptopp.podspec  sitemap.xml  tsconfig.build.json  tsconfig.json
.github/workflows/: compile_cryptopp.yml
.husky/: pre-commit
0.2.0/: index.html
0.2.0/aes-and-aes-candidates/aes/: index.html
0.2.0/hash-functions/blake2/: index.html
0.2.0/hash-functions/keccak/: index.html
0.2.0/hash-functions/lsh/: index.html
0.2.0/hash-functions/ripemd/: index.html
0.2.0/hash-functions/sha/: index.html
0.2.0/hash-functions/shake/: index.html
0.2.0/hash-functions/siphash/: index.html
0.2.0/hash-functions/sm3/: index.html
0.2.0/hash-functions/tiger/: index.html
0.2.0/hash-functions/whirlpool/: index.html
0.2.0/insecure/message-digest/: index.html
0.2.0/padding-schemes/hkdf/: index.html
0.2.0/padding-schemes/pbkdf12/: index.html
0.2.0/padding-schemes/pkcs5_pbkdf1/: index.html
0.2.0/padding-schemes/pkcs5_pbkdf2/: index.html
0.2.0/public-key-cryptography/rsa/: index.html
0.2.0/support/: index.html
0.2.0/utils/: index.html
aes-and-aes-candidates/aes/: index.html
aes-and-aes-candidates/aes-candidates/: index.html
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativecryptopp/: CryptoppBridge.java  CryptoppModule.java  CryptoppPackage.java
assets/css/: styles.35a2a9eb.css
assets/js/: 00310923.0497f9db.js  00310923.1f5e27ac.js  0b1f71c3.2f1f7065.js  0e384e19.011f5779.js  0e384e19.3bd427c9.js  0e384e19.62db3ae5.js  0e384e19.c97783d4.js  1208a233.255f155b.js  1208a233.a49a7f81.js  127d8b96.bf2625a8.js  127d8b96.f8868428.js  167826cb.267225ad.js  17896441.02d6e61a.js  17896441.9dd85385.js  17896441.a89999cb.js  19c49a9b.2387e1bd.js  19c49a9b.59bd916d.js  19c49a9b.934e0818.js  1be78505.85e60021.js  1be78505.8e2299ef.js  1be78505.e12fd161.js  1c5b3edb.301ab977.js  1c5b3edb.4d897aa3.js  1c5b3edb.e4048d85.js  20c55010.10e6a338.js  20c55010.dd2de072.js  23a045c4.7d8c274d.js  29136246.d4f81be5.js  3339f1ad.7e454780.js  3339f1ad.98cacb18.js  3b446482.9f944af6.js  3d920184.eaee6383.js  4034a648.65e2024d.js  4608.8358aad8.js  49ff469f.9624925e.js  4a71fbbc.26c9e504.js  4c957e7d.08db99ee.js  4dfd04b9.09fe4377.js  4f29e7ab.73399b14.js  53114c52.018f1e4c.js  (+121 more)
async/: index.html
blog/archive/: index.html
cpp/: JSIHelper.cpp  JSIHelper.h  ThreadPool.cpp  ThreadPool.h  aes-candidates.cpp  aes-candidates.h  aes-candidates.hpp  cryptopp  hash-functions-ho.cpp  hash-functions-ho.h  hash-functions.cpp  hash-functions.h  helpers.cpp  helpers.h  insecure.cpp  insecure.h  key-derivation.cpp  key-derivation.h  message-authentication.cpp  message-authentication.h  public-key.cpp  public-key.h  react-native-cryptopp.cpp  react-native-cryptopp.h  utils.cpp  utils.h
cpp/host_objects/: hash-functions.cpp  hash-functions.h
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/.docusaurus/: client-modules.js  docusaurus.config.js  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/docs/: intro.md
docs/docs/aes-and-aes-candidates/: _category_.json  aes-candidates.md  aes.md
docs/docs/hash-functions/: blake2.md  create.md  keccak.md  lsh.md  ripemd.md  sha.md  shake.md  siphash.md  sm3.md  tiger.md  whirlpool.md
docs/docs/high-speed-stream-ciphers/: _category_.json
docs/docs/insecure/: message-digest.md
docs/docs/key-agreement-schemes /: _category_.json
docs/docs/message-authentication/: _category_.json  hmac.md
docs/docs/other-block-ciphers/: _category_.json
docs/docs/padding-schemes/: _category_.json  hkdf.md  pbkdf12.md  pkcs5_pbkdf1.md  pkcs5_pbkdf2.md  scrypt.md
docs/docs/public-key-cryptography/: rsa.md
docs/docs/support/: support.md
docs/docs/utils/: _category_.json  utils.md
docs/versioned_docs/version-0.2.0/: intro.md
docs/versioned_docs/version-0.3.0/: intro.md
example/: app.json  index.js  package-lock.json  package.json
example/android/: build.gradle  settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx  utils.ts
hash-functions/blake2/: index.html
hash-functions/crc32/: index.html
hash-functions/create/: index.html
hash-functions/keccak/: index.html
hash-functions/lsh/: index.html
hash-functions/ripemd/: index.html
hash-functions/sha/: index.html
hash-functions/shake/: index.html
hash-functions/siphash/: index.html
hash-functions/sm3/: index.html
hash-functions/tiger/: index.html
hash-functions/whirlpool/: index.html
insecure/message-digest/: index.html
ios/: Cryptopp.h  Cryptopp.mm
ios/Cryptopp.xcodeproj/: project.pbxproj
message-authentication/cmac/: index.html
message-authentication/hmac/: index.html
next/: index.html
next/async/: index.html
next/support/: index.html
next/utils/: index.html
padding-schemes/hkdf/: index.html
padding-schemes/pbkdf12/: index.html
padding-schemes/pkcs5_pbkdf1/: index.html
padding-schemes/pkcs5_pbkdf2/: index.html
padding-schemes/scrypt/: index.html
public-key-cryptography/rsa/: index.html
scripts/: compile_cryptopp.js  compile_cryptopp.ts  compile_cryptopp_android.sh  compile_cryptopp_ios.sh  copy_pem_pack.sh  download_cryptopp.js  download_cryptopp.ts  get_cryptopp_version.js  get_cryptopp_version.ts  utils.ts
src/: Cryptopp.ts  HostObjects.ts  constants.ts  index.tsx  types.ts  utils.ts
src/__tests__/: index.test.tsx
support/: index.html
test/: .detoxrc.json  README.md  app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.jest.json
test/android/: settings.gradle
test/e2e/: jest.config.js  testSetup.ts  tsconfig.json
test/ios/: Podfile
test/src/: AesCandidates.tsx  App.tsx  HashFunctions.tsx  KeyDerivation.tsx  MessageAuthentication.tsx  publicKey.tsx
utils/: index.html
(+120 files in other folders)
